// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Input component with "className" property 1`] = `
<label
  className="input test-class"
>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "disabled" property 1`] = `
<label
  className="input input--disabled"
>
  <input
    aria-disabled={true}
    className="input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "multiline" property 1`] = `
<label
  className="input"
>
  <textarea
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    value=""
  />
</label>
`;

exports[`Should render Input component with "placeholder" property 1`] = `
<label
  className="input"
>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="test placeholder"
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "required" property 1`] = `
<label
  className="input"
>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "text" property 1`] = `
<label
  className="input input--activated"
>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value="test text"
  />
</label>
`;

exports[`Should render Input component with "title" and "required" property 1`] = `
<label
  className="input"
>
  <span
    className="input__title"
  >
    test title
    <sup>
      *
    </sup>
  </span>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "title" property 1`] = `
<label
  className="input"
>
  <span
    className="input__title"
  >
    test title
  </span>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with "title" property 2`] = `
<label
  className="input"
>
  <span
    className="input__title"
  >
    test title
  </span>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;

exports[`Should render Input component with default properties 1`] = `
<label
  className="input test-class input--activated input--disabled"
>
  <textarea
    aria-disabled={true}
    className="input__input"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="test placeholder"
    value="test text"
  />
</label>
`;

exports[`Should render Input component with required properties 1`] = `
<label
  className="input"
>
  <input
    className="input__input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</label>
`;
